--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
           <h4>Sitemap</h4>
           <ul>
             <li><a href="#top">Home</a></li>
-            <li><a href="#top">About us</a></li>
+            <li><a href="about.html">About us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="contact-brm.html">Connect with BRM</a></li>
             <li><a href="#services">Maintenance</a></li>
@@ -255,29 +255,29 @@
 
 
 <!-- =======---==== MODAL ==============  -->
-  <!-- temp - alert for scheduling portal to call office  -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="schedule-message" id="schedule">
-              <h5>Scheduling unavailable</h5>
-                <p>Please call the office at (724) 787-3758 or send us a message</p>
-                <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+        <!-- temp - alert for scheduling portal to call office  -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="schedule-message" id="schedule">
+                  <h5>Scheduling unavailable</h5>
+                  <p>Please call the office at <strong>(724) 787-3758</strong> or send us a message with your information and we will be in contact.</p>
+                  <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+              </div>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-          </div>
         </div>
-      </div>
-    </div>
 <!-- ========= MODAL END/ ==============  -->
 
 
