--- a/contact-brm.html
+++ b/contact-brm.html
@@ -225,7 +225,7 @@
               <div class="modal-body">
                 <div class="schedule-message" id="schedule">
                   <h5>Scheduling unavailable</h5>
-                  <p>Please call the office at (724) 787-3758 or send us a message</p>
+                  <p>Please call the office at <strong>(724) 787-3758</strong> or send us a message with your information and we will be in contact.</p>
                   <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
                 </div>
               </div>
@@ -235,7 +235,7 @@
             </div>
           </div>
         </div>
-        <!-- ========= MODAL END/ ==============  -->
+<!-- ========= MODAL END/ ==============  -->
 
 <!-- local js  -->
 <script src="js/main.js"></script>
