--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <h4>Sitemap</h4>
           <ul>
             <li><a href="#top">Home</a></li>
-            <li><a href="#top">About us</a></li>
+            <li><a href="about.html">About us</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="contact-brm.html">Connect with BRM</a></li>
             <li><a href="#services">Maintenance</a></li>
