--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!-- site under construction brian mcgee @ BRM.dev 2023  -->
 
 <!DOCTYPE html>
@@ -9,7 +10,7 @@
 <meta name="format-detection" content="telephone=no">
 
 <title>BRM Contractors Inc</title>
-<link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
+<link rel="icon" href="assets/logo/bm.ico" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -24,8 +25,8 @@
 <link rel="stylesheet" href="https://kit.fontawesome.com/8ab1cf7876.css" crossorigin="anonymous"> 
 
 <!-- local style sheet by brm  -->
-<link rel="stylesheet" href="css/temp.css" type="text/css">
-<link rel="stylesheet" href="css/grids.css" type="text/css"> <!-- page specific -->
+<link rel="stylesheet" href="css/style.css" type="text/css">
+<!-- <link rel="stylesheet" href="css/grids.css" type="text/css"> page specific -->
 
 
 </head>
@@ -36,10 +37,10 @@
   <!-- <div class="banner-bar"></div> -->
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
-      <img class="rounded mx-auto d-block" src="assets/logo/brm.jpg" style="width:210px" alt="BRM Contractors Inc">
+      <img class="rounded mx-auto d-block" src="assets/logo/bm.png" style="width:210px" alt="Home of Brian McGee">
     </div>
     <div class="col-sm" id="bannerImg2">
-      <img class="rounded mx-auto d-block" src="assets/logo/free-estimate.png" style="width:210px" alt="Free Estimate by BRM">
+      <img class="rounded mx-auto d-block" src="assets/logo/bm.png" style="width:210px" alt="Home of Brian McGee">
     </div>
   </div>
 </div>
@@ -70,11 +71,11 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#about.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            About Us
+            About Me
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="about.html">About BRM</a>
-            <a class="dropdown-item" href="contact-brm.html">Contact</a>
+            <a class="dropdown-item" href="#top">About</a>
+            <a class="dropdown-item" href="#top">Contact</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -82,19 +83,17 @@
             Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#services">Drywall and Painting</a>
-            <a class="dropdown-item" href="#services">Custom Decks</a>
-            <a class="dropdown-item" href="#services">Bathroom Remodel</a>
-            <a class="dropdown-item" href="#services">Kitchen Remodel</a>
-            <a class="dropdown-item" href="#services">Handyman Services</a>
+            <a class="dropdown-item" href="#top">Home Repair and Remodel</a>
+            <a class="dropdown-item" href="#top">Inspections and Consulting</a>
+            <a class="dropdown-item" href="#top">Web Design</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">
-              <button type="button" class="btn btn-outline" data-toggle="modal" data-target="#exampleModalCenter">Schedule</button>
+              <button type="button" class="btn btn-solid" data-toggle="modal" data-target="#exampleModalCenter">Connect</button>
             </a>
           </div>
         </li>
                 <li class="nav-item">
-          <a class="nav-link" id="lastNav" href="contact-brm.html">Connect with BRM</a>
+          <a class="nav-link" id="lastNav" href="#top">Connect with Me</a>
         </li>
     </div>
   </nav>
@@ -105,12 +104,12 @@
 <!-- ========= MASTHEAD ================ -->
 <div class="masthead">
   <div class="masthead-container">
-    <h3>Quality craftsmanship</h3>
-    <h1>Excellent Service</h1>
-    <h2>Drywall and painting, anything wood, bathrooms, roofing and siding and all sorts of remodeling.</h2>
-    <a href="contact-brm.html" class="btn-outline-red">FREE ESTIMATE</a>
+    <h3>Welcome</h3>
+    <h1>Brian McGee</h1>
+    <h2>Home repair contractor and aspiring web developer.</h2>
+    <a href="mailto:brianrmcgee@gmail.com" class="btn-outline">Connect</a>
     <div class="block-text">
-      <p>Total home repair</p>
+      <p>Official site</p>
     </div>
   </div>
 </div>
@@ -121,25 +120,25 @@
 <div class="wrapper row">
 
   <!-- ============ MAIN ================= -->
-  <div class="main">
+  <!-- <div class="main">
     <div class="overflow-hidden" style="max-height: 45vh;">
       <div class="container px-5 ">
-        <img src="assets/gallery/siding-corner.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="700" height="500" loading="lazy">
+        <img src="assets/logo/brian-mcgee.png" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="700" height="500" loading="lazy">
       </div>
     </div>
     <div class="main-content px-4 pt-0 my-0 text-center border-bottom">
-      <h1>The incredible handyman</h1>
+      <h1>Brian McGee</h1>
       <div class="main-content-info col-md-8 mx-auto">
-        <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today and one of our technicians will arrive and diagnose the problem. Provide insight and offer a solution. We are a home remodel company with decades of experience providing solutions to our clients. Home in need of some repairs, BRM has you covered. We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
+        <p class="lead mb-4">I am a home remodel contractor living in the Western PA area. I am currently learning web developement and it is very cool.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <a href="services.html" class="btn-outline">Services</a>
-          <a href="contact-brm.html" class="btn-outline">Connect</a>
+          <a href="about.html" class="btn-solid">About</a>
+          <a href="contact-bm.html" class="btn-solid">Connect</a>
         </div>
       </div>
 
     </div>
 
-  </div>
+  </div> -->
   <!-- ========== MAIN END/=============== -->
 
   <!-- ============ SIDEBAR ============== -->
@@ -149,20 +148,20 @@
         <p>Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
         </p>
         <div class="sidebar-img text-center">
-          <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:100px;">
+          <img src="assets/logo/brm.jpg" class="" alt="Total Service by BRM" style="width:100px;">
         </div>
       </div>
       <div class="sidebar-title">
         <h2 class="">Call today  
           <br><span>(724) 787-3758</span> 
-          <br>FREE Estimate</h2>
+          <br>Lets Connect</h2>
       </div>
     </div>
   </div>
   <!-- ========= SIDEBAR END/============= -->
 
   <!-- ============ AD =================== -->
-  <div class="ad">
+  <!-- <div class="ad">
     <div class="ad-card ">
       <div class="ad-img img-box">
         <img class="" style="width:248px;" src="assets/logo/free-estimate.png" alt="Total Service by BRM">
@@ -176,154 +175,23 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
   <!-- ========= AD END/ ================= -->
 
-  <!-- ========= SERVICES ================ -->
-  <section class="services" id="services">
-   <div class="container">
 
-    <div class="section-header">
-      <h2 class="display-6">Services</h2>
-      <p>BRM provides residential and commercial repair, building and maintenance. We solve those common home repair and maintenance problems as well as full service remodel projects, inspection and consulting. With decades of experience in the industry BRM has you covered. We are licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
-    </div>
-    <!-- CARD ROWS  -->
-    <div class="row gy-4">
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Custom decks</h5>
-              <img style="height:250px;" src="assets/gallery/custom-deck.jpg" class="card-img-top" alt="Wood repairs of all sorts">
-              <div class="card-body">
-              <p class="card-text">BRM builds and repairs all sorts of deck, handrail, posts and fences and more. Full service deck builds and fence installs. We repair and install anything wood.</p>
-            </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Bathrooms</h5>
-              <img style="height:250px;"  src="assets/gallery/bathroom1.jpg" class="card-img-top" alt="Bathroom remodeling">
-              <div class="card-body">
-              <p class="card-text">We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Painting</h5>
-              <img style="height:250px;"  src="assets/gallery/drywall1.jpg" class="card-img-top" alt="Painting and Sealing">
-              <div class="card-body">
-              <p class="card-text">We offer full service drywall patching and painting. Interior or exterior paint, stain, caulk or sealing available. Drywall and painting to complete install.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Kitchens</h5>
-              <img style="height:250px;"  src="assets/gallery/kitchen.png" class="card-img-top" alt="Kitchen remodeling">
-              <div class="card-body">
-              <p class="card-text">We repair all things kitchen! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full kitchen remodel and appliance installation.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-        
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Handyman</h5>
-              <img style="height:250px;"  src="assets/gallery/siding-lift.png" class="card-img-top" alt="Handyman services">
-              <div class="card-body">
-              <p class="card-text">Need something fixed or repaired, maybe even hung on a wall? We can help - we install your products! We also access steep and tall and repair those common home problems.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Custom Decks</h5>
-              <img style="height:250px;"  src="assets/gallery/custom-deck2.jpg" class="card-img-top" alt="Deck builds by BRM">
-              <div class="card-body">
-              <p class="card-text">Enjoy your new outdoor space with a new deck by BRM. We offer full service deck builds, fence installation, posts, handrails and more. We repair and install anything wood.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Windows and doors</h5>
-              <img style="height:250px;"  src="assets/gallery/windows.png" class="card-img-top" alt="Windows and doors by BRM">
-              <div class="card-body">
-              <p class="card-text">Leaking or drafty windows or doors, We repair and install all sorts of exterior items including windows, doors, mailboxes, wood trim and complete resealing.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Installations</h5>
-              <img style="height:250px;"  src="assets/gallery/carport.png" class="card-img-top" alt="Installation services by BRM">
-              <div class="card-body">
-              <p class="card-text">Have a product and just need it installed or assemblied, maybe even hung on a wall? We can help. BRM installs shelves, desks, applicances, tvs and more. </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <!-- card  -->
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Drywall</h5>
-              <img style="height:250px;"  src="assets/gallery/drywall-finish.jpg" class="card-img-top" alt="Drywall repairs">
-              <div class="card-body">
-              <p class="card-text">BRM offers complete drywall services. Drywall installation and finishing options available. We repair those pesky stains and offer painting.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-              
-    </div>
-  </div>
-  </section>
-  <!-- ======= SERVICES END/ ============= -->
 </div>
 <!-- ========== WRAPPER END/=========== -->
 
 
 <!-- ============ FOOTER ============== -->
-<footer id="footer" class="footer">
+<footer id="footer" class="footer" style="padding-top: 250px;">
   <div class="footer-content position-relative">
     <div class="container">
       <div class="row">
   
         <div class="col-lg-4 col-md-6">
           <div class="footer-info">
-            <h3>BRM Contractors Inc</h3>
+            <h3>Brian McGee</h3>
             <p>
               PO Box 66 <br>
               Hannastown, PA 15635<br><br>
@@ -331,9 +199,9 @@
               <span><i class="fa-light fa-at" style="color:#c8be06;font-size:20px;"></i></span><strong>Email:</strong> brianrmcgee@gmail.com<br>
             </p>
             <div class="social-links d-flex mt-3">
-              <a href="https://www.facebook.com/profile.php?id=100054525456256#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/facebook.jfif" alt="BRM"></img></a>
-              <a href="http://www.brmcontractors.net" class="d-flex align-items-center justify-content-center"><img src="assets/logo/brm-ico.png" alt="BRM"></img></a>
-              <a href="mailto:brianrmcgee@gmail.com" class="d-flex align-items-center justify-content-center"><img src="assets/logo/email.png" alt="BRM"></img></a>
+              <a href="http://www.brmdev.com" class="d-flex align-items-center justify-content-center"><img src="assets/logo/bm.ico" alt="BRM"></img></a>
+              <a href="http://www.brmcontractors.net" class="d-flex align-items-center justify-content-center"><img src="assets/logo/brm.jpg" alt="BRM"></img></a>
+              <a href="mailto:brianrmcgee@gmail.com" class="d-flex align-items-center justify-content-center"><img src="assets/logo/bm.ico" alt="BRM"></img></a>
             </div>
           </div>
         </div>
@@ -342,10 +210,9 @@
           <h4>Sitemap</h4>
           <ul>
             <li><a href="#top">Home</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="contact-brm.html">Connect with BRM</a></li>
-            <li><a href="#services">Maintenance</a></li>
+            <li><a href="#top">About</a></li>
+            <li><a href="#top">Services</a></li>
+            <li><a href="#top">Connect with Me</a></li>
           </ul>
         </div>
 
@@ -362,16 +229,16 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Message from Brian</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
         </button>
       </div>
       <div class="modal-body">
         <div class="schedule-message" id="schedule">
-          <h5>Scheduling unavailable</h5>
-          <p>Please call the office at <strong>(724) 787-3758</strong> or send us a message with your information and we will be in contact.</p>
-          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+          <h5>Wish to connect?</h5>
+          <p>Please me at <strong>(724) 787-3758</strong> or send us a message with your information and we will be in contact.</p>
+          <a href="#top" role="button" class="btn btn-solid popover-test disabled" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send Brian a message</a>
         </div>
       </div>
       <div class="modal-footer">
