--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </li>
                 <li class="nav-item">
-          <a class="nav-link" id="lastNav" href="#top">Connect with Me</a>
+          <a class="nav-link" id="lastNav" href="rbh.html">RBH TV</a>
         </li>
     </div>
   </nav>
