--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
 
 <!-- ============ WRAPPER ============= -->
-<div class="wrapper row">
-
+<div class="wrapper col-sm-6">
+<iframe class="py-3 mx-auto d-block " src="slots.html" frameborder="0" width="400" height="600" style="margin-top:50px;"></iframe>
   <!-- ============ MAIN ================= -->
   <!-- <div class="main">
     <div class="overflow-hidden" style="max-height: 45vh;">
