--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <!-- local style sheet by brm  -->
 <link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="stylesheet" href="css/grids.css" type="text/css">
 <!-- <link rel="stylesheet" href="css/grids.css" type="text/css"> page specific -->
 
 
@@ -33,8 +34,7 @@
 <body>
 
 <!-- ============ BANNER ============= -->
-<div class="banner" id="top">
-  <!-- <div class="banner-bar"></div> -->
+<!-- <div class="banner" id="top">
   <div class="container-fluid row">
     <div class="col-sm" id="bannerImg1">
       <img class="rounded mx-auto d-block" src="assets/logo/bm.png" style="width:210px" alt="Home of Brian McGee">
@@ -43,13 +43,30 @@
       <img class="rounded mx-auto d-block" src="assets/logo/bm.png" style="width:210px" alt="Home of Brian McGee">
     </div>
   </div>
-</div>
+</div> -->
+  <!-- ============ TOPBAR ============== -->
+  <div class="topbar banner">
+    <div class="topbar-card  container-sm text-center ">
+      <div class="topbar-info">
+        <h1 class="display-2">Welcome</h1>
+        <div class="topbar-img text-center">
+          <img src="assets/logo/bm.png" class="" alt="Total Service by BRM" style="width:100px;">
+        </div>
+      </div>
+      <div class="topbar-title">
+        <h2 class="">You must scroll  
+          <br><span>(724) 787-3758</span> 
+          <br>Lets Connect</h2>
+      </div>
+    </div>
+  </div>
+  <!-- ========= TOPBAR END/============= -->
 <!-- =========== BANNER END/ ========== -->
 
 <!-- ============ NAV-BAR ============= -->
 <div class="nav-bar col-12" id="navBar">
-  <!-- =========  NAVBAR ==========  -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-main">
+   <!-- =========  NAVBAR ==========  -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-main">
     <a class="navbar-brand" href="#">
       <i class="fa-solid fa-house h2 pt-2 ps-2"></i>
     </a>
@@ -75,7 +92,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#top">About</a>
-            <a class="dropdown-item" href="#top">Contact</a>
+            <a class="dropdown-item" href="http://www.brmcontractors.net">BRM Contractors</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -117,38 +134,37 @@
 
 
 <!-- ============ WRAPPER ============= -->
-<div class="wrapper col-sm-6">
-<iframe class="py-3 mx-auto d-block " src="slots.html" frameborder="0" width="400" height="600" style="margin-top:50px;"></iframe>
+<div class="wrapper">
+
   <!-- ============ MAIN ================= -->
-  <!-- <div class="main">
-    <div class="overflow-hidden" style="max-height: 45vh;">
-      <div class="container px-5 ">
+  <div class="main">
+    <div class="overflow-hidden" style="max-height: 61vh;">
+      <div class="container">
         <img src="assets/logo/brian-mcgee.png" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="700" height="500" loading="lazy">
       </div>
     </div>
-    <div class="main-content px-4 pt-0 my-0 text-center border-bottom">
-      <h1>Brian McGee</h1>
-      <div class="main-content-info col-md-8 mx-auto">
-        <p class="lead mb-4">I am a home remodel contractor living in the Western PA area. I am currently learning web developement and it is very cool.</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-          <a href="about.html" class="btn-solid">About</a>
-          <a href="contact-bm.html" class="btn-solid">Connect</a>
+    <div class="main-content px-1 pt-0 my-0 text-center">
+      <div class="sidebar-img text-center">
+        <img src="assets/logo/bm.png" class="" alt="Total Service by BRM" style="width:270px;">
+      </div>
+      <h1 class="mt-3">Welcome from Brian</h1>
+      <div class="main-content-info col-md-10 mx-auto">
+        <p class="">Chances are if it's broke - we can fix it. Give us a call today and one of our technicians will arrive and diagnose the problem. Provide insight and offer a solution. We are a home remodel company with decades of experience providing solutions to our clients. Home in need of some repairs, BRM has you covered. We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
+          <a href="services.html" class="btn-solid">Services</a>
+          <a href="contact-brm.html" class="btn-solid">Connect</a>
         </div>
       </div>
-
     </div>
-
-  </div> -->
+  </div>
   <!-- ========== MAIN END/=============== -->
-
   <!-- ============ SIDEBAR ============== -->
   <div class="sidebar">
     <div class="sidebar-card ">
       <div class="sidebar-info">
-        <p>Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
-        </p>
+        <h1>SIDEBAR</h1>
         <div class="sidebar-img text-center">
-          <img src="assets/logo/brm.jpg" class="" alt="Total Service by BRM" style="width:100px;">
+          <img src="assets/logo/bm.png" class="" alt="Total Service by BRM" style="width:100px;">
         </div>
       </div>
       <div class="sidebar-title">
@@ -159,32 +175,30 @@
     </div>
   </div>
   <!-- ========= SIDEBAR END/============= -->
-
   <!-- ============ AD =================== -->
-  <!-- <div class="ad">
-    <div class="ad-card ">
-      <div class="ad-img img-box">
-        <img class="" style="width:248px;" src="assets/logo/free-estimate.png" alt="Total Service by BRM">
-      </div>
+  <div class="ad">
+    <div class="ad-card">
       <div class="ad-info">
-        <p>With decades of experience solving the common home repair problem BRM has you covered. Chances are if it's broke, we can fix it. Give us a call today and one of our technicians will arrive and diagnose the problem. Provide insight and offer a friendly solution. We are at your service! 
-        </p>
+        <h1>AD</h1>
+        <div class="divider"></div>
+      </div>
+      <div class="ad-img">
+        <img class="" style="width:248px;" src="assets/logo/bm.png" alt="Total Service by BRM">
       </div>
       <div class="ad-title">
-        <h2><span>License PA112369</span><br>Fully Insured</h2>
+        <h2><span>Welcome<br>MY</span><br>People</h2>
       </div>
-
+      
     </div>
-  </div> -->
+  </div>
   <!-- ========= AD END/ ================= -->
-
 
 </div>
 <!-- ========== WRAPPER END/=========== -->
 
 
 <!-- ============ FOOTER ============== -->
-<footer id="footer" class="footer" style="padding-top: 250px;">
+<footer id="footer" class="footer">
   <div class="footer-content position-relative">
     <div class="container">
       <div class="row">
