--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ body{margin-top:20px;}
                       <p>I am learning to code so this site is dedicated to my work and progress throught this journey. Your welcome to check back! </p>
                       <div class="btn-bar">
                           <a class="px-btn theme" href="http://www.brmcontractors.net">BRM Contractors Inc.</a>
+                          <a class="px-btn theme" href="http://brmcgee.github.io/salandro">Salandro's Refuse Inc.</a>
                           <a class="px-btn theme-t" href="#main">My Page</a>
                       </div>
                   </div>
