--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ body{margin-top:20px;}
   .about-img {
     margin-top: 30px;
   }
+  .my-image {
+    display: none;
+  }
 }
 
 .counter-section {
@@ -194,7 +197,7 @@ body{margin-top:20px;}
   </div>
 </div> -->
   <!-- ============ TOPBAR ============== -->
-  <div class="topbar banner">
+  <div class="topbar banner"  style="padding-bottom: 500px;">
 
     <section class="section about-section gray-bg" id="about">
       <div class="container">
@@ -207,14 +210,13 @@ body{margin-top:20px;}
                       <p>I am learning to code so this site is dedicated to my work and progress throught this journey. Your welcome to check back! </p>
                       <div class="btn-bar">
                           <a class="px-btn theme" href="http://www.brmcontractors.net">BRM Contractors Inc.</a>
-                          <a class="px-btn theme" href="http://brmcgee.github.io/salandro">Salandro's Refuse Inc.</a>
-                          <a class="px-btn theme-t" href="#main">My Page</a>
+                          <a class="px-btn theme-t" href="http://brmcgee.github.io/salandro">Salandro's Refuse Inc.</a>
                       </div>
                   </div>
               </div>
               <div class="col-lg-5 text-center">
-                  <div class="about-img">
-                      <img src="assets/gallery/bg-masthead.jpg" style="max-width:500px;">
+                  <div class="about-img  container-fluid">
+                      <img class="img-fluid my-image" src="assets/gallery/bg-masthead.jpg" style="max-width:300px;">
                   </div>
               </div>
             
