--- a/pollin/index.html
+++ b/pollin/index.html
@@ -54,6 +54,10 @@
                 <img src="images/pollin-img10.JPEG" alt="img">
                 <img src="images/pollin-img3.JPEG" alt="img">
                 <img src="images/pollin-img-bg.JPEG" alt="img">
+                <img src="images/pollin-img-front1.jpg" alt="img">
+                <img src="images/pollin-img-front2.jpg" alt="img">
+                <img src="images/pollin-img-front3.jpg" alt="img">
+                <img src="images/pollin-img-front4.jpg" alt="img">
                 <img src="images/pollin-img1.JPEG" alt="img">
                 <img src="images/pollin-img5.JPEG" alt="img">
                 <img src="images/pollin-img6.JPEG" alt="img">
@@ -73,7 +77,9 @@
                 <img src="images/pollin-img19.JPEG" alt="img">
                 <img src="images/pollin-img20.JPEG" alt="img">
                 <img src="images/pollin-img21.JPEG" alt="img">
-                <img src="images/pollin-img34.JPEG" alt="img">
+                <img src="images/pollin-img-back1.jpg" alt="img">
+                <img src="images/pollin-img-back.jpg" alt="img">
+                <img src="images/pollin-img34.jpg" alt="img">
                 <img src="images/pollin-img22.JPEG" alt="img">
                 <img src="images/pollin-img23.JPEG" alt="img">
                 <img src="images/pollin-img24.JPEG" alt="img">
