--- a/pollin/index.html
+++ b/pollin/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pollin Ave</title>
+    <title>Pollin Ave | Home</title>
 
     <link rel="icon" href="pollin-ico.png"/>
-
     <link rel="stylesheet" href="img-slider-styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"> 
+
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous"> 
 
 
 </head>
 <body class="bg-dark">
-    <div class="wrapper" style="background-color: #3cca7c;">
+    <div class="wrapper m-3 p-3" style="background-color: #74eba9;">
         
         <section class="hero-component">
             <div class="container-fluid mb-3">
@@ -31,10 +31,10 @@
                         <div class="container my-5 py-1">
                             <div class="row p-1 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded  border-light  m-1">
                             <div class="masthead-container col-11 text-center mx-auto d-block text-uppercase">
-                                <h3 class="h4 text-russo">Beautiful sunsets!!</h3>
+                                <h3 class="h4 text-russo">Hempfield Township PA - Be your own negihbor</h3>
                                 <h1 class="display-1 fw-bold">Pollins Ave</h1>
-                                <h2 class="h5 p-2 col-lg-8 text-center text-russo mx-auto d-block">1.5+ AC Lot</h2>
-                                <a href="mailto:brianrmcgee@gmail.com" class="btn btn-outline btn-rounded mb-3">Contact Brian</a>
+                                <h2 class="h5 p-2 col-lg-8 text-center text-russo mx-auto d-block">1.5+ac lot#2bd/2bth/Water/elec/graveldrive/ac/heat</h2>
+                                <a href="mailto:brianrmcgee@gmail.com" class="btn btn-outline btn-rounded mb-3">Contact Brian - <span class="text-info"></span> </a>
                             </div>
                             </div>
 
