--- a/pollin/index.html
+++ b/pollin/index.html
@@ -92,6 +92,8 @@
                 <img src="images/pollin-img31.JPEG" alt="img">
                 <img src="images/pollin-img32.JPEG" alt="img">
                 <img src="images/pollin-img33.JPEG" alt="img">
+                <img src="images/pollin-map.jpg" alt="img">
+                <img src="images/pollin-map2.jpg" alt="img">
             </div>
 
             <i id="right" class="fa-solid fa-angle-right"  style="background-color: #1b99d3;"></i>
