--- a/pollin/one.html
+++ b/pollin/one.html
@@ -25,17 +25,17 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body>
+<body class="bg-dark">
 
 
-    <div id="carouselExampleControls" class="carousel slide mt-2" data-ride="carousel">
+    <div id="WOW" class="carousel slide mt-2" data-ride="carousel">
 
         <div id="carouselSlide"class="carousel-inner" style="height:100vh;width: auto;">
 
           <div class="carousel-item active">
             
             
-            <section class="hero-component">
+            <section class="hero-component" >
                 <div class="container-fluid mb-3">
                     <div class="row-cols-1 rows-col-lg-3 align-items-stretch">
                         <div class="col">
@@ -46,7 +46,7 @@
                                         background-size: cover;
                                         background-position: center;">
                             <div class="container my-5 py-1">
-                                <div class="row p-1 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded  border-light  m-1">
+                                <div class="row p-1 pb-0 pe-lg-0 pt-lg-1 align-items-center rounded  border-light  m-1">
                                 <div class="masthead-container col-11 text-center mx-auto d-block text-uppercase">
                                     <h3 class="h4 text-russo">Hempfield Township PA - Be your own negihbor</h3>
                                     <h1 class="display-1 fw-bold">Pollins Ave</h1>
@@ -67,12 +67,12 @@
 
         </div>
 
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#WOW" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon bg-dark rounded p-3" aria-hidden="true" style="margin-bottom: 300px;"></span>
           <span class="sr-only">Previous</span>
         </a>
 
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#WOW" role="button" data-slide="next">
           <span class="carousel-control-next-icon bg-dark rounded p-3" aria-hidden="true" style="margin-bottom: 300px;"></span>
           <span class="sr-only">Next</span>
         </a>
