--- a/pollin/one.html
+++ b/pollin/one.html
@@ -83,30 +83,20 @@
   <script src="images/images.js"></script>
 
   <script>
-    const slides = document.querySelector("#carouselSlide");
         
     const renderSlides = (img) => {
 
         let html = 
-        `
-        <div class="carousel-item">
+            `
+            <div class="carousel-item">
+            <img class="d-block w-100 mx-auto" src="${img}" alt="image" style="max-width:1200px;">
+            </div> 
+            `;
 
-
-          <img class="d-block w-100 mx-auto" src="${img}" alt="image" style="max-width:1200px;">
-
-
-
-        </div>
-
-        
-        `;
-
-        slides.innerHTML += html;
+        document.querySelector("#carouselSlide").innerHTML += html;
     };
 
-    images.forEach(img => {
-        renderSlides(img);
-    });
+    images.forEach(img => renderSlides(img));
 
   </script>
 
