--- a/pollin/gallery.html
+++ b/pollin/gallery.html
@@ -185,6 +185,7 @@ img.hover-shadow {
     
 
 
+<script src="images/images.js"></script>
 <script src="gallery-app.js"></script>
 
    <script>
@@ -237,58 +238,6 @@ function showSlide(n) {
 
 
    </script>
-<!-- 
-   <script>
-    const imagesPollin = [
-
-"images/pollin-img4.JPEG",
-"images/pollin-img-profile.jpg",
-"images/pollin-img10.JPEG",
-"images/pollin-img3.JPEG",
-"images/pollin-img-bg.JPEG",
-"images/pollin-img-front1.jpg",
-"images/pollin-img-front2.jpg",
-"images/pollin-img-front3.jpg",
-"images/pollin-img-front4.jpg",
-"images/pollin-img1.JPEG",
-"images/pollin-img5.JPEG",
-"images/pollin-img6.JPEG",
-"images/pollin-img7.JPEG",
-"images/pollin-img8.JPEG",
-"images/pollin-img9.JPEG",
-"images/pollin-img-r1.jpg",
-"images/pollin-img-r2.jpg",
-"images/pollin-img-r3.jpg",
-"images/pollin-img12.JPEG",
-"images/pollin-img13.JPEG",
-"images/pollin-img16.JPEG",
-"images/pollin-img-l2.jpg",
-"images/pollin-img-l3.jpg",
-"images/pollin-img17.JPEG",
-"images/pollin-img18.JPEG",
-"images/pollin-img19.JPEG",
-"images/pollin-img20.JPEG",
-"images/pollin-img21.JPEG",
-"images/pollin-img-back1.jpg",
-"images/pollin-img-back.jpg",
-"images/pollin-img34.jpg",
-"images/pollin-img22.JPEG",
-"images/pollin-img23.JPEG",
-"images/pollin-img24.JPEG",
-"images/pollin-img25.JPEG",
-"images/pollin-img26.JPEG",
-"images/pollin-img27.JPEG",
-"images/pollin-img28.JPEG",
-"images/pollin-img29.JPEG",
-"images/pollin-img30.JPEG",
-"images/pollin-img31.JPEG",
-"images/pollin-img32.JPEG",
-"images/pollin-img33.JPEG",
-"images/pollin-map.jpg",
-"images/pollin-map2.jpg"
-
-];
-   </script> -->
 
 </body>
 </html>
